--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "globalstate-hook",
-  "version": "0.1.0",
+  "name": "@mha15/globalstate-hook",
+  "version": "0.4.0",
   "description": "this is a react-hook which helps you to make stores(and any globalState) without needing context and Provider component",
   "main": "index.js",
   "types": "index.d.ts",
